test/js/node/test/parallel/test-stream-readable-next-no-null.js.log.txt
738 |     }
739 |     const error = args.pop();
740 |     // The error message should be non-enumerable
741 |     assert.strictEqual(Object.prototype.propertyIsEnumerable.call(error, 'message'), false);
742 | 
743 |     assert.throws(() => { throw error; }, validator);
                 ^
AssertionError: Expected values to be strictly deep-equal:
+ actual - expected

  {
+   message: 'requires 2 arguments',
-   code: 'ERR_STREAM_NULL_VALUES',
-   message: 'May not write null values to stream',
    name: 'TypeError'
  }
 code: "ERR_ASSERTION"

      at /Users/bun/code/bun/test/js/node/test/common/index.js:743:12
      at emitError (node:events:47:19)
      at emitErrorNT (internal:streams/destroy:125:21)
      at emitErrorCloseNT (internal:streams/destroy:108:26)
      at processTicksAndRejections (native:7:39)

Bun v1.1.34-debug+b186f0ba7 (macOS arm64)
